create get reseller profile to test authorization, create auth route for resellers authenticate themselfs
