# public/swagger.json
@@ -68,6 +68,23 @@ paths:
             $ref: "#/definitions/ResellerModel"
         400:
           description: "Bad Request"
+  /v1/resellers/profile:
+    get:
+      tags:
+      - "Resellers"
+      security:
+      - auth: []
+      summary: "Get a reseller"
+      operationId: "getReseller"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/ResellerModel"
+        400:
+          description: "Bad Request"
 definitions:  
   Token:
     properties:
